// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryItem.test.js is in edit mode after startEditing was called 1`] = `
<tr
  class="story-item"
>
  <td
    colspan="5"
  >
    <form
      class="story-form"
    >
      <div
        class="row"
      >
        <div
          class="col-md-10"
        >
          <div
            aria-labelledby="__BVID__39___BV_label_"
            class="b-form-group form-group"
            id="__BVID__39_"
            role="group"
          >
            <label
              class="col-form-label pt-0"
              for="story-title"
              id="__BVID__39___BV_label_"
            >
              Story *
            </label>
            <div
              class=""
            >
              <input
                aria-required="true"
                class="form-control"
                id="story-title"
                required="required"
                type="text"
              />
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="col-md-2"
        >
          <div
            aria-labelledby="__BVID__41___BV_label_"
            class="b-form-group form-group"
            id="__BVID__41_"
            role="group"
          >
            <label
              class="col-form-label pt-0"
              for="story-points"
              id="__BVID__41___BV_label_"
            >
              Story points
            </label>
            <div
              class=""
            >
              <input
                class="form-control"
                id="story-points"
                min="0"
                type="number"
              />
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </div>
      </div>
       
      <div
        aria-labelledby="__BVID__43___BV_label_"
        class="b-form-group form-group"
        id="__BVID__43_"
        role="group"
      >
        <label
          class="col-form-label pt-0"
          for="story-description"
          id="__BVID__43___BV_label_"
        >
          Notes
        </label>
        <div
          class=""
        >
          <textarea
            class="form-control"
            id="story-description"
            rows="1"
            wrap="soft"
          />
          <!---->
          <!---->
          <!---->
        </div>
      </div>
       
      <button
        class="btn btn-primary"
        type="submit"
      >
        Save
      </button>
       
      <button
        class="btn btn-grey"
        type="button"
      >
        Cancel
      </button>
    </form>
  </td>
</tr>
`;

exports[`StoryItem.test.js shows backlog page 1`] = `
<tr
  class="story-item"
>
  <td>
    <span
      class="js-drag-drop"
    >
      <!---->
    </span>
  </td>
   
  <td>
    
            S-001
        
  </td>
   
  <td>
    
            Test story
        
  </td>
   
  <td>
    
            5 SP
        
  </td>
   
  <!---->
   
  <!---->
   
  <td>
    <!---->
     
    <!---->
  </td>
   
  <!---->
   
  <!---->
</tr>
`;

exports[`StoryItem.test.js shows history page 1`] = `
<tr
  class="story-item"
>
  <!---->
   
  <td>
    
            S-001
        
  </td>
   
  <td>
    
            Test story
        
  </td>
   
  <td>
    
            5 SP
        
  </td>
   
  <td>
    <span
      class="badge badge-dark"
    >
      
                open
            
    </span>
  </td>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</tr>
`;

exports[`StoryItem.test.js shows planning-backlog page 1`] = `
<tr
  class="story-item"
>
  <!---->
   
  <td>
    
            S-001
        
  </td>
   
  <td>
    
            Test story
        
  </td>
   
  <td>
    
            5 SP
        
  </td>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <td>
    <!---->
     
    <!---->
  </td>
   
  <!---->
</tr>
`;

exports[`StoryItem.test.js shows planning-sprint page 1`] = `
<tr
  class="story-item"
>
  <td>
    <span
      class="js-drag-drop"
    >
      <!---->
    </span>
  </td>
   
  <td>
    
            S-001
        
  </td>
   
  <td>
    
            Test story
        
  </td>
   
  <td>
    
            5 SP
        
  </td>
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <td>
    <!---->
  </td>
</tr>
`;

exports[`StoryItem.test.js shows sprint page 1`] = `
<tr
  class="story-item"
>
  <!---->
   
  <td>
    
            S-001
        
  </td>
   
  <td>
    
            Test story
        
  </td>
   
  <td>
    
            5 SP
        
  </td>
   
  <!---->
   
  <td>
    <!---->
  </td>
   
  <!---->
   
  <!---->
   
  <!---->
</tr>
`;
